--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile "org.jetbrains.anko:anko:$anko_version"
     compile "com.android.support:recyclerview-v7:26.1.0"
     kapt "com.android.databinding:compiler:$gradle_version"
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 
