--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,13 @@ dependencies {
     kapt "com.android.databinding:compiler:$gradle_version"
 
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'org.greenrobot:eventbus:3.1.1'
+//    kapt 'org.greenrobot:eventbus-annotation-processor:3.0.1'
 }
 
-
-
+//kapt {
+//    arguments {
+//        arg('eventBusIndex', 'com.m.databindingdemo.MyEventBusIndex')
+//    }
+//}
